@startuml Trabajo Practico Alquiler de Autos
title Diagrama de clases
interface IEstadoVehiculo {
    + puedeReservarse(): boolean
    + getNombre(): string
}

class Disponible implements IEstadoVehiculo {
    + puedeReservarse(): boolean
    + getNombre(): string
}

class EnAlquiler implements IEstadoVehiculo {
    + puedeReservarse(): boolean
    + getNombre(): string
}

class EnMantenimiento implements IEstadoVehiculo {
    + puedeReservarse(): boolean
    + getNombre(): string
}

interface IVehiculoFactory {
    + crearVehiculo(tipo: string, matricula: number): Vehiculo
}

class VehiculoFactory implements IVehiculoFactory {
    - gestor: IGestorTemporadas
    + crearVehiculo(tipo: string, matricula: number): Vehiculo
}

interface IGestorTemporadas {
    + getPorcentajeTemporada(reserva: Reserva): number
}

class GestorTemporadas {
    + getPorcentajeTemporada(reserva:Reserva):number
    + getTemporada(reserva:Reserva)
}

class DriveHub {
    - vehiculos: Vehiculo[]
    - clientes: Cliente[]
    - reservas: Reserva[]

    + ingresarVehiculo(vehiculo: Vehiculo): void
    + ingresarReserva(cliente: Cliente, vehiculo: Vehiculo, fechaInicio: Date, fechaFin: Date): void
    + agregarMantenimientoAVehiculo(vehiculo: Vehiculo, mantenimiento: Mantenimiento): void
    + getters() y setters()
}

class CalculadoraEstadisticas {
    - sistema: DriveHub

    + getVehiculosMasYMenosAlquilados(fechaInicio: Date, fechaFin: Date): {mas: Vehiculo | null, menos: Vehiculo | null}
    + getRentabilidadVehiculos(): {masRentable: Vehiculo | null, menosRentable: Vehiculo | null}
    + getOcupacionFlota(): number
}

abstract class Vehiculo {
    # matricula: number
    # estado: EstadoVehiculo
    # kilometraje: number
    # kilometrajeUltMantenimiento: number
    # alquileresDesdeUltMantenimiento: number
    # fechaUltMantenimiento: Date
    # historialMantenimiento: Mantenimiento[]
    # gestorTemporadas: IGestorTemporadas

    + calcularTarifa(reserva: Reserva): number
    + getCostoTotalMantenimientos(): number
    + getters() y setters()
}

class Compacto extends Vehiculo {
    - tarifaBase: number
    - cargoAdicional: number
    - kmPermitidos: number
    + calcularTarifa(reserva: Reserva): number
}

class Sedan extends Vehiculo {
    - tarifaBase: number
    - cargoAdicional: number
    + calcularTarifa(reserva: Reserva): number
}

class SUV extends Vehiculo {
    - tarifaBase: number
    - cargoAdicional: number
    - cargoFijoSeguro: number
    - kmPermitidos: number
    + calcularTarifa(reserva: Reserva): number
}

class Cliente {
    - dni: number
    - nombre: string
    - telefono: number
}

class Reserva {
    - cliente: Cliente
    - vehiculo: Vehiculo
    - fechaInicio: Date
    - fechaFin: Date
    - kmRecorridos: number

    + getters() y setters()
}

class Mantenimiento {
    - fecha: Date
    - costo: number
    - descripcion: string

    + getters() y setters()
}

IGestorTemporadas <|.. GestorTemporadas

DriveHub --> IVehiculoFactory
DriveHub *-- Reserva
DriveHub o-- Vehiculo
DriveHub o-- Cliente

Reserva --> Vehiculo
Reserva --> Cliente
Vehiculo o-- Mantenimiento
Vehiculo --> IGestorTemporadas
Vehiculo --> IEstadoVehiculo

CalculadoraEstadisticas --> DriveHub

@enduml
